After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 736839 - spelling error
spelling error
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: documentation
unspecified
Other Linux
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-09-17 23:41 UTC by Adrian Owen
Modified: 2014-11-08 14:14 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Adrian Owen 2014-09-17 23:41:10 UTC
http://gstreamer.freedesktop.org/data/doc/gstreamer/head/gstreamer/html/gstreamer-Gst.html

Any discreet (packetizable) media type is supported ...

I believe the word is discrete.

Thanks,

Adrian Owen
Comment 1 Olivier Crête 2014-09-18 01:50:18 UTC
Fixed

commit e87660425c22574f7f0438677c819534f8962286
Author: Olivier Crête <olivier.crete@collabora.com>
Date:   Wed Sep 17 21:49:18 2014 -0400

    gst: Fix spelling error
    
    Thank to Adrian Owen for reporting this error.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=736839